--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 h1 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
+    font-size: 400%;
   }
   h2, h3 {
     color: #444;
@@ -14,9 +14,10 @@ h1 {
   }
   body, input[type="text"], button {
     color: #333;
-    font-family: Cambria, Georgia, serif;
+    font-family: Arial, Helvetica, sans-serif;
   }
   /* everywhere else */
   * {
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
   }
